--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "cors": "^2.8.3",
     "express": "^4.15.3",
     "react": "^0.14.7",
-    "react-bootstrap": "^0.31.0",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.0"
   },
@@ -24,6 +23,11 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.23.1",
+    "foundation-sites": "^6.2.0",
+    "jquery": "^2.2.1",
+    "script-loader": "^0.6.1",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.13"
   }
 }
